Atualização dos templates

--- a/portfolio/templates/portfolio/contacto.html
+++ b/portfolio/templates/portfolio/contacto.html
@@ -2,7 +2,6 @@
 {% block main %}
     <style>
         #contact {
-            background-color: #f9f9f9;
             padding: 60px 0;
             text-align: center;
         }
@@ -10,12 +9,12 @@
         #contact h2 {
             font-size: 36px;
             margin-bottom: 20px;
-            color: #333;
+            color: aliceblue;
         }
 
         #contact p {
             font-size: 18px;
-            color: #666;
+            color: aliceblue;
             margin-bottom: 20px;
         }
 
@@ -45,7 +44,7 @@
 
         #contact p:last-child {
             font-size: 16px;
-            color: #999;
+            color: aliceblue;
         }
 
     </style>
