--- a/portfolio/static/portfolio/css/estilo.css
+++ b/portfolio/static/portfolio/css/estilo.css
@@ -1,47 +1,89 @@
 nav {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    z-index: 1;
+    padding: 20px 0;
 }
 
 nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 nav li {
-  display: inline-block;
-  margin-right: 20px;
+    display: inline-block;
+    margin-right: 20px;
 }
 
 nav a {
-  display: block;
-  padding: 10px;
-  text-decoration: none;
-  color: #333;
+    display: inline-block;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: aliceblue;
+    font-size: 20px;
+    transition: all 0.3s ease;
 }
 
 nav a:hover {
-  background-color: #f9f9f9;
-  color: #000;
+    color: deeppink;
 }
 
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+    display: none;
+    position: absolute;
+    background-color: #5897fb;
+    min-width: 160px;
+    box-shadow: aliceblue;
+    z-index: 1;
+    border-radius: 4px;
 }
 
 .dropdown-content a {
-  color: #333;
-  padding: 10px;
-  text-decoration: none;
-  display: block;
+    padding: 10px;
+    text-decoration: none;
+    display: block;
 }
 
 .dropdown:hover .dropdown-content {
-  display: block;
+    display: block;
 }
+
+/* Estilos para o tema claro */
+[data-theme='light'] {
+    background-color: #ffffff;
+    color: #333333;
+}
+
+/* Estilos para o tema escuro */
+[data-theme='dark'] {
+    background-color: #333333;
+    color: #ffffff;
+}
+
+/* Restante do código CSS */
+/* Restante do código CSS */
+
+#footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    padding: 20px 0;
+}
+
+#footer p {
+    font-size: 20px;
+    text-align: center;
+    margin: 0;
+}
+
+#footer a {
+    color: white;
+}
+
+#footer img {
+    width: 35px;
+}
+
