--- a/staticfiles/portfolio/css/estilo.css
+++ b/staticfiles/portfolio/css/estilo.css
@@ -1,87 +1,89 @@
-@import url('https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap');
-
-/* Estilo para o header */
-header {
-    padding: 20px;
+nav {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.dropdown {
+    justify-content: center;
     position: relative;
-    display: inline-block;
+    z-index: 1;
+    padding: 20px 0;
 }
 
-.dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: rgb(21, 195, 207);
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
+nav ul {
+    list-style-type: none;
     margin: 0;
+    padding: 0;
 }
 
-nav a:hover,
-.dropdown:hover .dropbtn {
-    background-color: white;
+nav li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+nav a {
+    display: inline-block;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: aliceblue;
+    font-size: 20px;
+    transition: all 0.3s ease;
+}
+
+nav a:hover {
+    color: deeppink;
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: #f9f9f9;
+    background-color: #5897fb;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: aliceblue;
     z-index: 1;
+    border-radius: 4px;
 }
 
 .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
+    padding: 10px;
     text-decoration: none;
     display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {
-    background-color: #cc9797e3;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
-/* Estilo para o menu */
-nav {
-    display: flex;
-    justify-content: center;
+/* Estilos para o tema claro */
+[data-theme='light'] {
+    background-color: #ffffff;
+    color: #333333;
 }
 
-nav ul {
+/* Estilos para o tema escuro */
+[data-theme='dark'] {
+    background-color: #333333;
+    color: #ffffff;
+}
+
+/* Restante do código CSS */
+/* Restante do código CSS */
+
+#footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    padding: 20px 0;
+}
+
+#footer p {
+    font-size: 20px;
+    text-align: center;
     margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
 }
 
-nav li {
-    margin: 0 10px;
+#footer a {
+    color: white;
 }
 
-nav a {
-    color: black;
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: bold;
-    transition: color 0.3s ease;
-}
-
-nav a:hover {
-    color: #ddd;
+#footer img {
+    width: 35px;
 }
 
