--- a/staticfiles/portfolio/css/estilos1.css
+++ b/staticfiles/portfolio/css/estilos1.css
@@ -1,51 +1,145 @@
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing:border-box;
-  font-family: sans-serif;
+    box-sizing: border-box;
 }
 
-header {
-  height: 10vh;
-  background: purple;
-  color: white;
-  top: 0;
-
-  /* alinhando logo e menu */
-  display:flex;
-  justify-content: space-between;
-  align-items: center;
+nav {
+    margin: 27px auto 0;
+    display: flex;
+    position: relative;
+    width: 590px;
+    height: 50px;
+    background-color: #000000;
+    border-radius: 12px;
+    font-size: 0;
+    z-index: 1;
 }
-
-header div {
-  font-size: 2em;
-  padding: 1em;
-}
-
-header nav {
-  display:flex;
-  justify-contents: flex-end;
-}
-
 
 nav a {
-  padding: 0 1em;
-  text-decoration: none;
-  font-size: 1rem;
-  color: lightgray;
+    line-height: 50px;
+    height: 100%;
+    font-size: 15px;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+    color: white;
+    cursor: pointer;
 }
 
-
-main {
-  height: 85vh;
-  background-color:grey;
-  padding: 4em 4em;
+nav .animation {
+    position: absolute;
+    height: 100%;
+    top: 0;
+    z-index: 0;
+    transition: all .5s ease 0s;
+    border-radius: 8px;
 }
 
-footer {
-  height:5vh;
-  display:flex;
-  justify-content: flex-end;
-  padding: 0 2vw;
-  align-items: center;
+a:nth-child(1) {
+    width: 100px;
+}
+
+a:nth-child(2) {
+    width: 110px;
+}
+
+a:nth-child(3) {
+    width: 100px;
+}
+
+a:nth-child(4) {
+    width: 160px;
+}
+
+a:nth-child(5) {
+    width: 120px;
+}
+
+nav .start-home,
+a:nth-child(1):hover ~ .animation {
+    width: 100px;
+    left: 0;
+    background-color: #FFD21C;
+}
+
+nav .start-about,
+a:nth-child(2):hover ~ .animation {
+    width: 110px;
+    left: 100px;
+    background-color: #e74c3c;
+}
+
+nav .start-blog,
+a:nth-child(3):hover ~ .animation {
+    width: 100px;
+    left: 210px;
+    background-color: #3498db;
+}
+
+nav .start-portefolio,
+a:nth-child(4):hover ~ .animation {
+    width: 160px;
+    left: 310px;
+    background-color: #9b59b6;
+}
+
+nav .start-contact,
+a:nth-child(5):hover ~ .animation {
+    width: 120px;
+    left: 470px;
+    background-color: #e67e22;
+}
+
+:root {
+    --color: #FFD21C;
+}
+
+.content {
+    max-width: 80%;
+    margin: 0 auto;
+    padding: 0 20px;
+
+}
+
+.hero {
+    position: relative;
+    color: white;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+
+}
+
+.hero h2 {
+    position: relative;
+    z-index: 1;
+    font-size: 4.5rem;
+    margin: 0 0 10px;
+    line-height: 1;
+    color: rgba(255, 255, 255, 0.9);
+}
+
+.hero p {
+    position: relative;
+    z-index: 1;
+    color: rgba(255, 255, 255, 0.5);
+    line-height: 1.4;
+    font-family: 'Cherry Swash', cursive;
+    font-size: 16px;
+}
+
+@media only screen and (max-width: 768px) {
+    nav {
+        margin: 10px auto 0;
+        height: 40px;
+        border-radius: 6px;
+    }
+
+    nav a {
+        line-height: 40px;
+        font-size: 14px;
+    }
 }
