--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -23,7 +23,7 @@
         /* Estilo para a seção hero */
         @media (max-width: 600px) {
             .hero {
-                background-image: url('{% static "portfolio/images/port5.jpeg.jpeg" %}');
+                background-image: url('{% static "portfolio/images/port5.jpeg" %}');
                 background-size: cover;
                 background-position: center;
                 height: 600px;
