--- a/portfolio/templates/portfolio/layout.html
+++ b/portfolio/templates/portfolio/layout.html
@@ -22,10 +22,10 @@
         <ul>
             <li><a href="{% url 'portfolio:index' %}">Home</a></li>
             <li class="dropdown">
-                <a href="{% url 'portfolio:index' %}">Sobre Mim</a>
+                <a href="">Sobre Mim</a>
                 <div class="dropdown-content">
                     <a href="{% url 'portfolio:lista_cadeiras' %}">Licenciatura</a>
-                    <a href="{% url 'portfolio:lista_educacao' %}">Educação</a>
+                    <a href="{% url 'portfolio:educacao' %}">Educação</a>
                     <a href="{% url 'portfolio:lista_certificados' %}">Certificados</a>
                     <a href="{% url 'portfolio:lista_experiencia_profisional' %}">Experiência Profissional</a>
                     <a href="{% url 'portfolio:lista_competencias_pessoais' %}">Aptidões e competências pessoais</a>
@@ -35,12 +35,12 @@
 
             <li><a href="{% url 'portfolio:projetos' %}">Projetos</a></li>
             <li class="dropdown">
-                <a href="{% url 'portfolio:web' %}">Web</a>
+                <a href="">Web</a>
                 <div class="dropdown-content">
                     <a href="{% url 'portfolio:tecnologias' %}">Tecnologias Existentes</a>
                     <a href="{% url 'portfolio:sobre' %}">Sobre Este Website</a>
                     <a href="{% url 'portfolio:laboratorios' %}">Laboratórios</a>
-                    <a href="{% url 'portfolio:noticias' %}">Notícias</a>
+                    <a href="https://www.publico.pt /">Notícias</a>
                     <a href="{% url 'portfolio:lista_competencias_pessoais' %}">Exemplos e Técnicas</a>
                     <a href="{% url 'portfolio:lista_interesses_hobbies' %}">Quizz</a>
                 </div>
