--- a/portfolio/templates/portfolio/lista_certificados.html
+++ b/portfolio/templates/portfolio/lista_certificados.html
@@ -11,10 +11,6 @@
             padding: 20px;
         }
 
-        .content {
-            margin-bottom: 20px;
-        }
-
         button {
             background-color: #007bff;
             color: #fff;
@@ -22,6 +18,10 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
+        }
+
+        h2{
+            color: white;
         }
 
         .colorful {
@@ -40,16 +40,13 @@
     <section class="certificates">
         <div class="certificate">
             <h2>Certificado do 12º Ano</h2>
-            <p>Liceu João 23</p>
             <img src="{% static 'portfolio/images/certf12an.jpg' %}" alt="Certificado 1">
         </div>
 
         <div class="certificate">
             <h2>Certidão de Frequência 11º Ano</h2>
-            <p>Liceu João 23</p>
             <img src="{% static 'portfolio/images/certf11ano.jpg' %}" alt="Certificado 2">
         </div>
 
-        <!-- Adicione mais certificados conforme necessário -->
     </section>
 {% endblock %}
