--- a/portfolio/templates/portfolio/blog.html
+++ b/portfolio/templates/portfolio/blog.html
@@ -1,76 +1,58 @@
 {% extends 'portfolio/layout.html' %}
 
+{% block styles %}
+<style>
+    /* Estilos específicos para os artigos */
+    .artigo {
+        background-color: #fff;
+        padding: 20px;
+        margin-bottom: 20px;
+        border-radius: 5px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .artigo h3 {
+        color: #333;
+        font-size: 30px;
+        margin-bottom: 10px;
+    }
+
+    .artigo p {
+        color: #555;
+        font-size: 16px;
+        margin-bottom: 15px;
+    }
+</style>
+{% endblock %}
+
 {% block main %}
-    <style>
-        /* Estilos gerais */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f1f1f1;
-        }
+<h1>{{ blog.nome }}</h1>
 
-        h1 {
-            color: #333;
-            font-size: 28px;
-        }
+<div class="row">
+    <div class="col-6">
+        <h2>Áreas</h2>
+        <ul>
+            {% for area in areas %}
+                <li>{{ area.nome }}</li>
+            {% endfor %}
+        </ul>
 
-        h2 {
-            color: #777;
-            font-size: 20px;
-            margin-top: 20px;
-        }
+        <h2>Autores</h2>
+        <ul>
+            {% for autor in autores %}
+                <li>{{ autor.nome }}</li>
+            {% endfor %}
+        </ul>
+    </div>
 
-        ul {
-            list-style-type: none;
-            padding-left: 0;
-        }
-
-        li {
-            margin-bottom: 5px;
-        }
-
-        /* Estilos específicos para os artigos */
-        .artigo {
-            background-color: #fff;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .artigo h3 {
-            color: #333;
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-
-        .artigo p {
-            color: #555;
-            font-size: 16px;
-            margin-bottom: 15px;
-        }
-    </style>
-
-    <h1>{{ blog.nome }}</h1>
-
-    <h2>Áreas</h2>
-    <ul>
-        {% for area in areas %}
-            <li>{{ area.nome }}</li>
+    <div class="col-6">
+        <h2>Artigos</h2>
+        {% for artigo in artigos %}
+            <div class="artigo">
+                <h3>{{ artigo.titulo }}</h3>
+                <p>{{ artigo.conteudo }}</p>
+            </div>
         {% endfor %}
-    </ul>
-
-    <h2>Autores</h2>
-    <ul>
-        {% for autor in autores %}
-            <li>{{ autor.nome }}</li>
-        {% endfor %}
-    </ul>
-
-    <h2>Artigos</h2>
-    {% for artigo in artigos %}
-        <div class="artigo">
-            <h3>{{ artigo.titulo }}</h3>
-            <p>{{ artigo.conteudo }}</p>
-        </div>
-    {% endfor %}
+    </div>
+</div>
 {% endblock %}
