--- a/portfolio/templates/portfolio/layout.html
+++ b/portfolio/templates/portfolio/layout.html
@@ -27,7 +27,7 @@
                     <a href="{% url 'portfolio:lista_cadeiras' %}">Licenciatura</a>
                     <a href="{% url 'portfolio:educacao' %}">Educação</a>
                     <a href="{% url 'portfolio:lista_certificados' %}">Certificados</a>
-                    <a href="{% url 'portfolio:lista_competencias_pessoais' %}">Aptidões e competências pessoais</a>
+                    <a href="{% url 'portfolio:competencias' %}">Aptidões e competências pessoais</a>
                     <a href="{% url 'portfolio:mais_sobre_mim' %}">Interesses e hobbies</a>
                 </div>
             </li>
@@ -38,10 +38,9 @@
                 <div class="dropdown-content">
                     <a href="{% url 'portfolio:tecnologias' %}">Tecnologias Existentes</a>
                     <a href="{% url 'portfolio:exercicios' %}">JavaScript Calculadora</a>
-                    <a href="{% url 'portfolio:laboratorios' %}">Laboratórios</a>
+                    <a href="{% url 'portfolio:labs' %}">Laboratórios</a>
                     <a href="https://www.publico.pt/">Notícias</a>
-                    <a href="{% url 'portfolio:lista_competencias_pessoais' %}">Exemplos e Técnicas</a>
-                    <a href="{% url 'portfolio:quizz' %}">Quizz</a>
+                    <a href="{% url 'portfolio:quiz' %}">Quizz</a>
                 </div>
             </li>
             <li><a href="{% url 'portfolio:web_scrapping' %}">Web Scrapping</a></li>
